--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,118 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
+  <header class="page-header">
+
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo-header.svg" width=" "height="" alt="Логотип Cat Energy">
+      </a>
+      <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--active">
+          <a>Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalig.html">Каталог продукции</a>
+        </li>
+        <li class="site-list__item">
+          <a href="program-form.html">Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="page-main">
+    <h1 class="visually-hidden">Интернет-магазин питания для котов "Cat Energy"</h1>
+    <article class="program-banner">
+      <h2 class="program-banner__heading heading-page">Функциональное питание для котов</h2>
+      <b class="program-banner__slogan">Занялся собой? Займись котом!</b>
+      <a class="program-banner__button button">Подобрать программу</a>
+    </article>
+    <section class="categories">
+      <ul class="categories__list">
+        <li class="categories__item">
+          <h2 class="categories__heading">Похудение</h2>
+          <p class="categories__text">Ваш кот весит больше собаки и почти утратил
+            способность лазить по деревьям? Пора на диету!
+            Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="categories-button button" href="">Каталог SLIM</a>
+        </li>
+        <li class="categories__item">
+          <h2 class="categories__heading">Набор массы</h2>
+          <p class="categories__text">Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить необходимые
+            мышцы!</p>
+          <a class="categories-button button" href="">Каталог PRO</a>
+        </li>
+      </ul>
+    </section>
+    <section class="use">
+      <h2 class="use__heading heading-page">Как это работает</h2>
+      <ul class="use__list">
+        <li class="use__item">Функциональное питание содержит только полезные
+          питательные вещества.</li>
+        <li class="use__item">Выпускается в виде порошка, который нужно лишь
+          залить кипятком и готово.</li>
+        <li class="use__item">Замените один-два приема обычной еды на наше
+          фунцкциональное питание.</li>
+        <li class="use__item">Уже через месяц наслаждайтесь изменениями к
+          лучшему вашего питомца!</li>
+      </ul>
+    </section>
+    <section class="sample">
+      <h2 class="sample__heading heading-page">Живой пример</h2>
+      <p class="sample__text">Борис сбросил 5 кг за 2 месяца, просто заменив
+        свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
+        При этом он не менял своих привычек и по-прежнему спит по 16
+        часов в день. </p>
+        <table class="sample__stats">
+          <tr>
+            <td class="sample__value">5 кг</td>
+            <td class="sample__value">60 дней</td>
+          </tr>
+          <tr>
+            <td class="sample__field">Снижение веса</td>
+            <td class="sample__field">Затрачено времени</td>
+          </tr>
+          <caption class="sample__totals">Затраты на питание: 15 000 руб.</caption>
+        </table>
+        <span class="sample__scale-before">Было</span>
+        <span class="sample__scale-after">Стало</span>
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <section class="page-footer__cooperation cooperation">
+      <h2 class="vissualy-hidden">Сотрудничество</h2>
+      <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
+      <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    </section>
+    <section class="page-footer__map map">
+      <h2 class="vissualy-hidden">Карта</h2>
+      <img class="map__image" src="" width="" height="" alt="Карта">
+    </section>
+    <img class="page-footer__logo" src="" width="" height="" alt="Логотип Cat Energy">
+    <section class="page-footer__social social">
+      <h2 class="vissualy-hidden">Cat Energy в социальных сетях</h2>
+      <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
+          </li>
+        </ul>
+    </section>
+    <section class="page-footer__copyright copyright">
+      <h2 class="vissualy-hidden">Разработчик</h2>
+      <b class="copyright__text">HTML academy</b>
+      <a class="copyright__link" href=""><img class="copyright__logo" src="https://htmlacademy.ru/intensive/adaptive" width="" height="" alt="Логотип HTML academy"></a>
+    </section>
+  </footer>
 
   </body>
 </html>
