Верстка главной страницы. Добавляет классы.

--- a/source/index.html
+++ b/source/index.html
@@ -7,11 +7,10 @@
   <body>
 
   <header class="page-header">
-
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-header.svg" width=" "height="" alt="Логотип Cat Energy">
-      </a>
-      <nav class="main-nav">
+    <a class="page-header__logo">
+      <img class="page-header__logo-image" src="img/logo-header.svg" width=" "height="" alt="Логотип Cat Energy">
+    </a>
+    <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
@@ -29,7 +28,7 @@
 
   <main class="page-main">
     <h1 class="visually-hidden">Интернет-магазин питания для котов "Cat Energy"</h1>
-    <article class="program-banner">
+    <article class="page-main__program-banner program-banner">
       <h2 class="program-banner__heading heading-page">Функциональное питание для котов</h2>
       <b class="program-banner__slogan">Занялся собой? Займись котом!</b>
       <a class="program-banner__button button">Подобрать программу</a>
@@ -38,52 +37,41 @@
       <ul class="categories__list">
         <li class="categories__item">
           <h2 class="categories__heading">Похудение</h2>
-          <p class="categories__text">Ваш кот весит больше собаки и почти утратил
-            способность лазить по деревьям? Пора на диету!
-            Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="categories-button button" href="">Каталог SLIM</a>
+          <p class="categories__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="categories-button button" href="#">Каталог SLIM</a>
         </li>
         <li class="categories__item">
           <h2 class="categories__heading">Набор массы</h2>
-          <p class="categories__text">Заработать авторитет среди дворовых котов и даже собак?
-            Серия Cat Energy Pro поможет вашему коту нарастить необходимые
-            мышцы!</p>
-          <a class="categories-button button" href="">Каталог PRO</a>
+          <p class="categories__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="categories-button button" href="#">Каталог PRO</a>
         </li>
       </ul>
     </section>
     <section class="use">
       <h2 class="use__heading heading-page">Как это работает</h2>
       <ul class="use__list">
-        <li class="use__item">Функциональное питание содержит только полезные
-          питательные вещества.</li>
-        <li class="use__item">Выпускается в виде порошка, который нужно лишь
-          залить кипятком и готово.</li>
-        <li class="use__item">Замените один-два приема обычной еды на наше
-          фунцкциональное питание.</li>
-        <li class="use__item">Уже через месяц наслаждайтесь изменениями к
-          лучшему вашего питомца!</li>
+        <li class="use__item">Функциональное питание содержит только полезные питательные вещества.</li>
+        <li class="use__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+        <li class="use__item">Замените один-два приема обычной еды на наше фунцкциональное питание.</li>
+        <li class="use__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
       </ul>
     </section>
     <section class="sample">
       <h2 class="sample__heading heading-page">Живой пример</h2>
-      <p class="sample__text">Борис сбросил 5 кг за 2 месяца, просто заменив
-        свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
-        При этом он не менял своих привычек и по-прежнему спит по 16
-        часов в день. </p>
-        <table class="sample__stats">
-          <tr>
-            <td class="sample__value">5 кг</td>
-            <td class="sample__value">60 дней</td>
-          </tr>
-          <tr>
-            <td class="sample__field">Снижение веса</td>
-            <td class="sample__field">Затрачено времени</td>
-          </tr>
-          <caption class="sample__totals">Затраты на питание: 15 000 руб.</caption>
-        </table>
-        <span class="sample__scale-before">Было</span>
-        <span class="sample__scale-after">Стало</span>
+      <p class="sample__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+      <table class="sample__stats">
+        <tr>
+          <td class="sample__value">5 кг</td>
+          <td class="sample__value">60 дней</td>
+        </tr>
+        <tr>
+          <td class="sample__field">Снижение веса</td>
+          <td class="sample__field">Затрачено времени</td>
+        </tr>
+        <caption class="sample__totals" valign="bottom">Затраты на питание: 15 000 руб.</caption>
+      </table>
+      <span class="sample__scale-before">Было</span>
+      <span class="sample__scale-after">Стало</span>
     </section>
   </main>
 
