Дорабатывает разметку главно страницы

--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
       <h2 class="program-banner__heading heading-page">Функциональное питание для котов</h2>
       <b class="program-banner__slogan">Занялся собой? Займись котом!</b>
       <img class="page-main__product" width="" height="" alt="Продукт Cat Energy с курицей">
-      <a class="program-banner__button button" href="#">Подобрать программу</a>
+      <a class="program-banner__button button" href="program-form.html">Подобрать программу</a>
     </section>
     <section class="categories">
       <ul class="categories__list">
