--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <a href="index.html" class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image" src="img/logo-header.svg" width=" "height="" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
