--- a/source/index.html
+++ b/source/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Кэт энерджи</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Кэт энерджи</title>
+</head>
+<body>
 
   <header class="page-header">
     <a class="page-header__logo">
-      <img class="page-header__logo-image" src="img/logo-header.svg" width=" "height="" alt="Логотип Cat Energy">
+      <img class="page-header__logo-image" src="img/logo-header.svg" width="" height="" alt="Логотип Cat Energy">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -17,9 +17,7 @@
           <a>Главная</a>
         </li>
         <li class="site-list__item">
-
           <a href="catalog.html">Каталог продукции</a>
-
         </li>
         <li class="site-list__item">
           <a href="program-form.html">Подбор программы</a>
@@ -30,14 +28,12 @@
 
   <main class="page-main">
     <h1 class="visually-hidden">Интернет-магазин питания для котов "Cat Energy"</h1>
-
     <section class="page-main__program-banner program-banner">
-      <h2 class="program-banner__heading heading-page">Функциональное питание для котов</h2>
+      <h2 class="program-banner__heading">Функциональное питание для котов</h2>
       <b class="program-banner__slogan">Занялся собой? Займись котом!</b>
-      <img class="page-main__product" width="" height="" alt="Продукт Cat Energy с курицей">
+      <img class="program-banner__product" src="#" width="" height="" alt="Продукт Cat Energy с курицей">
       <a class="program-banner__button button" href="program-form.html">Подобрать программу</a>
     </section>
-
     <section class="categories">
       <ul class="categories__list">
         <li class="categories__item">
@@ -52,9 +48,8 @@
         </li>
       </ul>
     </section>
-
     <section class="how-it-works">
-      <h2 class="how-it-works__heading heading-page">Как это работает</h2>
+      <h2 class="how-it-works__heading">Как это работает</h2>
       <ul class="how-it-works__list">
         <li class="how-it-works__item">Функциональное питание содержит только полезные питательные вещества.</li>
         <li class="how-it-works__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
@@ -62,54 +57,50 @@
         <li class="how-it-works__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
       </ul>
     </section>
-    <section class="real-sample">
-      <h2 class="real-sample__heading heading-page">Живой пример</h2>
-      <p class="real-sample__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-      <dl class="real-sample__stats">
-        <dt class="real-sample__value">5 кг</dt>
-        <dd class="real-sample__field">Снижение веса</dd>
-        <dt class="real-sample__value">60 дней</dt>
-        <dd class="real-sample__field">Затрачено времени</dd>
+    <section class="real-example">
+      <h2 class="real-example__heading">Живой пример</h2>
+      <p class="real-example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+      <dl class="real-example__stats">
+        <dt class="real-example__value">5 кг</dt>
+        <dd class="real-example__field">Снижение веса</dd>
+        <dt class="real-example__value">60 дней</dt>
+        <dd class="real-example__field">Затрачено времени</dd>
       </dl>
-      <p class="real-sample__totals" valign="bottom">Затраты на питание: 15 000 руб.</p>
-      <img class="real-sample__image" width="" height="" alt="Живой пример">
-      <span class="real-sample__scale-before">Было</span>
-      <span class="real-sample__scale-after">Стало</span>
+      <p class="real-example__totals">Затраты на питание: 15 000 руб.</p>
+      <img class="real-example__image" width="" height="" alt="Живой пример">
+      <span class="real-example__scale-before">Было</span>
+      <span class="real-example__scale-after">Стало</span>
     </section>
-    <section class="page-footer__cooperation cooperation">
-
+    <section class="cooperation">
       <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
       <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
-    <section class="page-footer__map map">
-
-      <img class="map__image" src="" width="" height="" alt="Карта">
+    <section class="map">
+      <img class="map__image" src="#" width="" height="" alt="Карта">
     </section>
   </main>
 
   <footer class="page-footer">
-
-    <img class="page-footer__logo" src="" width="" height="" alt="Логотип Cat Energy">
+    <img class="page-footer__logo" src="#" width="" height="" alt="Логотип Cat Energy">
     <section class="page-footer__social social">
       <h2 class="vissualy-hidden">Cat Energy в социальных сетях</h2>
       <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
-          </li>
-        </ul>
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="#">Инстаграм</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#">Фейсбук</a>
+        </li>
+      </ul>
     </section>
-
-<section class="page-footer__copyright copyright">
+    <section class="page-footer__copyright copyright">
       <b class="copyright__text">HTML academy</b>
-      <a class="copyright__link" href=""><img class="copyright__logo" src="https://htmlacademy.ru/intensive/adaptive" width="" height="" alt="Логотип HTML academy"></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img class="copyright__logo" src="#" width="" height="" alt="Логотип HTML academy"></a>
     </section>
   </footer>
 
-  </body>
+</body>
 </html>
