--- a/source/program-form.html
+++ b/source/program-form.html
@@ -1,148 +1,148 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Кэт энерджи. Подбор программы.</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Кэт энерджи. Подбор программы.</title>
+</head>
+<body>
 
-    <header class="page-header">
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-header.svg" width=" "height="" alt="Логотип Cat Energy">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="site-list__item site-list__item--active">
-            <a>Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <header class="page-header">
+    <a class="page-header__logo" href="index.html">
+      <img class="page-header__logo-image" src="img/logo-header.svg" width="" height="" alt="Логотип Cat Energy">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+          <a href="index.html">Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html">Каталог продукции</a>
+        </li>
+        <li class="site-list__item site-list__item--active">
+          <a>Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <main class="page-main">
-      <h1 class="page-main__heading-page heading-page">Подбор программы</h1>
-      <section class="picking-program">
-        <p class="picking-program__text">Заполните анкету и мы подберем программу питания для Вашего кота</p>
-        <form class="picking-program__form" method="get" action="https://echo.htmlacademy.ru">
-          <fieldset>
-            <legend class="visually-hidden">Общие данные</legend>
-            <ul>
-              <li class="program-form__item">
-                <label class="picking-program__label" for="name">Имя:<sup>*</sup></label>
-                <input class="picking-program__input-text input-text" type="text" id="name" name="name" placeholder="Барсик">
-              </li>
-              <li class="program-form__item">
-                <label class="picking-program__label" for="heft">Вес (кг):<sup>*</sup></label>
-                <input class="picking-program__input-text input-text" type="text" id="heft" name="heft" placeholder="7">
-              </li>
-              <li class="program-form__item">
-                <label class="picking-program__label" for="age">Возраст (лет):</label>
-                <input class="picking-program__input-text input-text" type="text" id="age" name="age" placeholder="7">
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset>
-            <legend class="visually-hidden">Цель программы</legend>
-            <ul>
-              <li class="program-form__item">
-                <input class="visually-hidden program-form__input-radio input-radio" type="radio" name="goal-program" value="diet" id="losing-weight" checked>
-                <label for="losing-weight">Похудение</label>
-              </li>
-              <li class="program-form__item">
-                <input class="visually-hidden program-form__input-radio input-radio" type="radio" name="goal-program" value="mass" id="mass-gathering">
-                <label for="mass-gathering">Набор массы</label>
-              </li>
-              <li class="program-form__item">
-                <input class="visually-hidden program-form__input-radio input-radio" type="radio" name="goal-program" value="advice" id="no-savvy">
-                <label for="no-savvy">Не знаю (нужен Ваш совет)</label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset>
-            <legend class="program-form__legend">Контактные данные (владельца кота)</legend>
-            <ul>
-              <li class="program-form__item">
-                <label for="email">E-mail:<sup>*</sup></label>
-                <input class="program-form__input-text input-text input-text--icon" type="email" name="email" id="email" placeholder="KUKLACHEV@GMAIL.COM">
-              </li>
-              <li class="program-form__item">
-                <label for="tel">Телефон:<sup>*</sup></label>
-                <input class="program-form__input-text input-text input-text--icon" type="tel" name="tel" id="tel" placeholder="8 (960)900 60 90">
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset>
-            <legend class="program-form__legend">Комментарий</legend>
-            <ul>
-              <li class="program-form__item">
-                <textarea class="program-form__textarea textarea-comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset>
-            <legend class="program-form__legend">Дополнительно</legend>
-            <ul>
-              <li class="program-form__item">
-                <input class="visually-hidden program-form__input-checkbox input-checkbox inpun-checkbox--checked" type="checkbox" name="sweetener" id="sweetener" checked>
-                <label for="sweetener">Сахарозаменитель</label>
-              </li>
-              <li class="program-form__item">
-                <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="water" id="water">
-                <label for="water">Питьевая вода</label>
-              </li>
-              <li class="program-form__item">
-                <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="milk" id="milk">
-                <label for="milk">Молоко</label>
-              </li>
-              <li class="program-form__item">
-                <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="vitamins" id="vitamins">
-                <label for="vitamins">Витамины</label>
-              </li>
-            </ul>
-          </fieldset>
-          <button class="program-form__button button">Отправить заявку</button>
-        </form>
-        <small class="program-form__footnote program-form__footnote--top">
-          <sup>*</sup> — Обязательные поля
-        </small>
-      </section>
-      <section class="page-footer__cooperation cooperation">
-        <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
-        <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </section>
-      <section class="page-footer__map map">
-        <img class="map__image" src="" width="" height="" alt="Карта">
-      </section>
-    </main>
+  <main class="program-form-main">
+    <h1 class="program-form-main__heading-page">Подбор программы</h1>
+    <section class="picking-program">
+      <p class="picking-program__text">Заполните анкету и мы подберем программу питания для Вашего кота</p>
+      <form class="picking-program__form" method="get" action="https://echo.htmlacademy.ru">
+        <fieldset>
+          <legend class="visually-hidden">Общие данные</legend>
+          <ul>
+            <li class="program-form__item">
+              <label class="picking-program__label" for="name">Имя:<sup>*</sup></label>
+              <input class="picking-program__input-text input-text" type="text" id="name" name="name" placeholder="Барсик">
+            </li>
+            <li class="program-form__item">
+              <label class="picking-program__label" for="heft">Вес (кг):<sup>*</sup></label>
+              <input class="picking-program__input-text input-text" type="text" id="heft" name="heft" placeholder="7">
+            </li>
+            <li class="program-form__item">
+              <label class="picking-program__label" for="age">Возраст (лет):</label>
+              <input class="picking-program__input-text input-text" type="text" id="age" name="age" placeholder="7">
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend class="visually-hidden">Цель программы</legend>
+          <ul>
+            <li class="program-form__item">
+              <input class="visually-hidden program-form__input-radio input-radio" type="radio" name="goal-program" value="diet" id="losing-weight" checked>
+              <label for="losing-weight">Похудение</label>
+            </li>
+            <li class="program-form__item">
+              <input class="visually-hidden program-form__input-radio input-radio" type="radio" name="goal-program" value="mass" id="mass-gathering">
+              <label for="mass-gathering">Набор массы</label>
+            </li>
+            <li class="program-form__item">
+              <input class="visually-hidden program-form__input-radio input-radio" type="radio" name="goal-program" value="advice" id="no-savvy">
+              <label for="no-savvy">Не знаю (нужен Ваш совет)</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend class="program-form__legend">Контактные данные (владельца кота)</legend>
+          <ul>
+            <li class="program-form__item">
+              <label for="email">E-mail:<sup>*</sup></label>
+              <input class="program-form__input-text input-text input-text--icon" type="email" name="email" id="email" placeholder="KUKLACHEV@GMAIL.COM">
+            </li>
+            <li class="program-form__item">
+              <label for="tel">Телефон:<sup>*</sup></label>
+              <input class="program-form__input-text input-text input-text--icon" type="tel" name="tel" id="tel" placeholder="8 (960)900 60 90">
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend class="program-form__legend">Комментарий</legend>
+          <ul>
+            <li class="program-form__item">
+              <textarea class="program-form__textarea textarea-comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend class="program-form__legend">Дополнительно</legend>
+          <ul>
+            <li class="program-form__item">
+              <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="sweetener" id="sweetener" checked>
+              <label for="sweetener">Сахарозаменитель</label>
+            </li>
+            <li class="program-form__item">
+              <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="water" id="water">
+              <label for="water">Питьевая вода</label>
+            </li>
+            <li class="program-form__item">
+              <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="milk" id="milk">
+              <label for="milk">Молоко</label>
+            </li>
+            <li class="program-form__item">
+              <input class="visually-hidden program-form__input-checkbox input-checkbox" type="checkbox" name="vitamins" id="vitamins">
+              <label for="vitamins">Витамины</label>
+            </li>
+          </ul>
+        </fieldset>
+        <button class="program-form__button button">Отправить заявку</button>
+      </form>
+      <small class="program-form__footnote program-form__footnote--top">
+        <sup>*</sup> — Обязательные поля
+      </small>
+    </section>
+    <section class="cooperation">
+      <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
+      <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    </section>
+    <section class="map">
+      <img class="map__image" src="#" width="" height="" alt="Карта">
+    </section>
+  </main>
 
-    <footer class="page-footer">
-      <img class="page-footer__logo" src="" width="" height="" alt="Логотип Cat Energy">
-      <section class="page-footer__social social">
-        <h2 class="vissualy-hidden">Cat Energy в социальных сетях</h2>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
-          </li>
-        </ul>
-      </section>
-      <section class="page-footer__copyright copyright">
-        <b class="copyright__text">HTML academy</b>
-        <a class="copyright__link" href=""><img class="copyright__logo" src="https://htmlacademy.ru/intensive/adaptive" width="" height="" alt="Логотип HTML academy"></a>
-      </section>
-    </footer>
+  <footer class="page-footer">
+    <img class="page-footer__logo" src="#" width="" height="" alt="Логотип Cat Energy">
+    <section class="page-footer__social social">
+      <h2 class="vissualy-hidden">Cat Energy в социальных сетях</h2>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="#">Инстаграм</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#">Фейсбук</a>
+        </li>
+      </ul>
+    </section>
+    <section class="page-footer__copyright copyright">
+      <b class="copyright__text">HTML academy</b>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img class="copyright__logo" src="#" width="" height="" alt="Логотип HTML academy"></a>
+    </section>
+  </footer>
 
-  </body>
+</body>
 </html>
