--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог интернет-магазина Кэт энерджи</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
 </head>
 <body>
 
   <header class="page-header">
     <a class="page-header__logo" href="index.html">
-      <img class="page-header__logo-image" src="img/logo-header.svg" width="" height="" alt="Логотип Cat Energy">
+      <img class="page-header__logo-image" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+      <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -32,7 +35,7 @@
       <ul class="catalog__list">
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="#" width="" height="" alt="Cat Energy PRO 500 г">
+            <img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
             <h2 class="card-product__heading">Cat Energy PRO 500 г</h2>
             <table class="card-product__product-characteristics">
               <tr>
@@ -53,7 +56,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="#" width="" height="" alt="Cat Energy PRO 1000 г">
+            <img class="card-product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
             <h2 class="card-product__heading">Cat Energy PRO 1000 г</h2>
             <table class="card-product__product-characteristics">
               <tr>
@@ -74,7 +77,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="#" width="" height="" alt="Cat Energy PRO 500 г">
+            <img class="card-product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
             <h2 class="card-product__heading">Cat Energy PRO 500 г</h2>
             <table class="card-product__product-characteristics">
               <tr>
@@ -95,7 +98,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="#" width="" height="" alt="Cat Energy PRO 500 г">
+            <img class="card-product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
             <h2 class="card-product__heading">Cat Energy PRO 1000 г</h2>
             <table class="card-product__product-characteristics">
               <tr>
@@ -116,7 +119,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="#" width="" height="" alt="Cat Energy PRO 500 г">
+            <img class="card-product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
             <h2 class="card-product__heading">Cat Energy SLIM 500 г</h2>
             <table class="card-product__product-characteristics">
               <tr>
@@ -137,7 +140,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="#" width="" height="" alt="Cat Energy PRO 500 г">
+            <img class="card-product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
             <h2 class="card-product__heading">Cat Energy SLIM 1000 г</h2>
             <table class="card-product__product-characteristics">
               <tr>
@@ -158,7 +161,7 @@
         </li>
         <li class="catalog__item card-product">
           <article class="card-product__item">
-            <img class="card-product__image" src="#" width="" height="" alt="Cat Energy PRO 500 г">
+            <img class="card-product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
             <h2 class="card-product__heading">Cat Energy SLIM 500 г</h2>
             <table class="card-product__product-characteristics">
               <tr>
@@ -178,7 +181,7 @@
           </article>
         </li>
       </ul>
-      <section class="more-product">
+      <section class="more-products">
         <b class="more-product__all-goods">Показать еще 100500 товаров</b>
         <p class="more-product__slogan">На самом деле вкусов гораздо больше!</p>
         <a class="more-product__button button" href="#">Показать все</a>
@@ -221,7 +224,7 @@
         </ul>
       </section>
       <section class="promo">
-        <b class="promo-slogan">Закажите все и получите чехол для кота в подарок!</b>
+        <b class="promo__slogan">Закажите все и получите чехол для кота в подарок!</b>
       </section>
     </section>
     <section class="cooperation">
@@ -229,12 +232,12 @@
       <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
     <section class="map">
-      <img class="map__image" src="#" width="" height="" alt="Карта">
+      <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
     </section>
   </main>
 
   <footer class="page-footer">
-    <img class="page-footer__logo" src="#" width="" height="" alt="Логотип Cat Energy">
+    <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
     <section class="page-footer__social social">
       <h2 class="vissualy-hidden">Cat Energy в социальных сетях</h2>
       <ul class="social__list">
