Добавляет базовую стилизацию каталога основных товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,7 +51,7 @@
                 <td class="card-product__value">700 Р.</td>
               </tr>
             </table>
-            <a class="card-product__button button">Заказать</a>
+            <a class="card-product__button button button--theme-green">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
@@ -72,7 +72,7 @@
                 <td class="card-product__value">1000 Р.</td>
               </tr>
             </table>
-            <a class="card-product__button button">Заказать</a>
+            <a class="card-product__button button button--theme-green">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
@@ -93,7 +93,7 @@
                 <td class="card-product__value">700 Р.</td>
               </tr>
             </table>
-            <a class="card-product__button button">Заказать</a>
+            <a class="card-product__button button button--theme-green">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
@@ -114,7 +114,7 @@
                 <td class="card-product__value">1000 Р.</td>
               </tr>
             </table>
-            <a class="card-product__button button">Заказать</a>
+            <a class="card-product__button button button--theme-green">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
@@ -135,7 +135,7 @@
                 <td class="card-product__value">400 Р.</td>
               </tr>
             </table>
-            <a class="card-product__button button">Заказать</a>
+            <a class="card-product__button button button--theme-green">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
@@ -156,7 +156,7 @@
                 <td class="card-product__value">700 Р.</td>
               </tr>
             </table>
-            <a class="card-product__button button">Заказать</a>
+            <a class="card-product__button button button--theme-green">Заказать</a>
           </article>
         </li>
         <li class="catalog__item card-product">
@@ -177,7 +177,7 @@
                 <td class="card-product__value">500 Р.</td>
               </tr>
             </table>
-            <a class="card-product__button button">Заказать</a>
+            <a class="card-product__button button button--theme-green">Заказать</a>
           </article>
         </li>
       </ul>
@@ -195,7 +195,7 @@
               <dt class="additional-products__field">1 упаковка</dt>
               <dd class="additional-products__value">100 Р.</dd>
             </dl>
-            <a class="additional-products__button button" href="#">Заказать</a>
+            <a class="additional-products__button button button--theme-green" href="#">Заказать</a>
           </li>
           <li class="additional-products__item">
             <h3 class="additional-products__heading">Питьевая вода</h3>
@@ -203,7 +203,7 @@
               <dt class="additional-products__field">5 литров</dt>
               <dd class="additional-products__value">50 Р.</dd>
             </dl>
-            <a class="additional-products__button button" href="#">Заказать</a>
+            <a class="additional-products__button button button--theme-green" href="#">Заказать</a>
           </li>
           <li class="additional-products__item">
             <h3 class="additional-products__heading">Молоко</h3>
@@ -211,7 +211,7 @@
               <dt class="additional-products__field">1 литр</dt>
               <dd class="additional-products__value">100 Р.</dd>
             </dl>
-            <a class="additional-products__button button" href="#">Заказать</a>
+            <a class="additional-products__button button button--theme-green" href="#">Заказать</a>
           </li>
           <li class="additional-products__item">
             <h3 class="additional-products__heading">Витамины</h3>
@@ -219,7 +219,7 @@
               <dt class="additional-products__field">1 упаковка (30 г)</dt>
               <dd class="additional-products__value">300 Р.</dd>
             </dl>
-            <a class="additional-products__button button" href="#">Заказать</a>
+            <a class="additional-products__button button button--theme-green" href="#">Заказать</a>
           </li>
         </ul>
       </section>
