Добавляет базовые стили блоку акции на странице каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -184,10 +184,10 @@
       <section class="more-products">
         <b class="more-product__all-goods">Показать еще 100500 товаров</b>
         <p class="more-product__slogan">На самом деле вкусов гораздо больше!</p>
-        <a class="more-product__button button" href="#">Показать все</a>
+        <a class="more-product__button button button--theme-grey" href="#">Показать все</a>
       </section>
       <section class="additional-products">
-        <h2>Дополнительные товары</h2>
+        <h2 class="additional-products__title">Дополнительные товары</h2>
         <ul class="additional-products__list">
           <li class="additional-products__item">
             <h3 class="additional-products__heading">Сахарозаменитель</h3>
@@ -239,7 +239,7 @@
   <footer class="page-footer">
     <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
     <section class="page-footer__social social">
-      <h2 class="vissualy-hidden">Cat Energy в социальных сетях</h2>
+      <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
@@ -254,7 +254,7 @@
     </section>
     <section class="page-footer__copyright copyright">
       <b class="copyright__text">HTML academy</b>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img class="copyright__logo" src="#" width="" height="" alt="Логотип HTML academy"></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">Ссылка на сайт HTML academy</span></a>
     </section>
   </footer>
 
