Добавляет стили шапки и подвала на странице формы

--- a/source/program-form.html
+++ b/source/program-form.html
@@ -3,24 +3,27 @@
 <head>
   <meta charset="utf-8">
   <title>Кэт энерджи. Подбор программы.</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
 </head>
 <body>
 
   <header class="page-header">
     <a class="page-header__logo" href="index.html">
-      <img class="page-header__logo-image" src="img/logo-header.svg" width="" height="" alt="Логотип Cat Energy">
+      <img class="page-header__logo-image" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+      <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
-          <a href="index.html">Главная</a>
+          <a class="site-list__link" href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
-          <a href="catalog.html">Каталог продукции</a>
+          <a class="site-list__link" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="site-list__item site-list__item--active">
-          <a>Подбор программы</a>
+          <a class="site-list__link">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -118,14 +121,14 @@
       <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
     <section class="map">
-      <img class="map__image" src="#" width="" height="" alt="Карта">
+      <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
     </section>
   </main>
 
   <footer class="page-footer">
-    <img class="page-footer__logo" src="#" width="" height="" alt="Логотип Cat Energy">
+    <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
     <section class="page-footer__social social">
-      <h2 class="vissualy-hidden">Cat Energy в социальных сетях</h2>
+      <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
@@ -140,7 +143,7 @@
     </section>
     <section class="page-footer__copyright copyright">
       <b class="copyright__text">HTML academy</b>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img class="copyright__logo" src="#" width="" height="" alt="Логотип HTML academy"></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">Ссылка на сайт HTML academy</span></a>
     </section>
   </footer>
 
