Дорабатывает index.html с учетом потребностей сетки и стилизацию блока живой пример

--- a/source/index.html
+++ b/source/index.html
@@ -61,19 +61,29 @@
       </ul>
     </section>
     <section class="real-example">
-      <h2 class="real-example__heading">Живой пример</h2>
-      <p class="real-example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-      <dl class="real-example__stats">
-        <dt class="real-example__value">5 кг</dt>
-        <dd class="real-example__field">Снижение веса</dd>
-        <dt class="real-example__value">60 дней</dt>
-        <dd class="real-example__field">Затрачено времени</dd>
-      </dl>
-      <p class="real-example__totals">Затраты на питание: 15 000 руб.</p>
-      <img class="real-example__image" src="img/after-mobile@1x.png" width="320" height="240" alt="Худой кот">
-      <img class="real-example__image" src="img/before-mobile@1x.png" width="320" height="240" alt="Толстый кот">
-      <span class="real-example__scale-before">Было</span>
-      <span class="real-example__scale-after">Стало</span>
+      <section class="real-example__history">
+        <h2 class="real-example__heading">Живой пример</h2>
+        <p class="real-example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+        <div class="real-example__wrapper-stats">
+          <dl class="real-example__stats">
+            <dt class="real-example__value">5 кг</dt>
+            <dd class="real-example__field">Снижение веса</dd>
+            <dt class="real-example__value">60 дней</dt>
+            <dd class="real-example__field">Затрачено времени</dd>
+          </dl>
+          <p class="real-example__totals">Затраты на питание: 15 000 руб.</p>
+        </div>
+      </section>
+      <section class="real-example__galery">
+        <div class="real-example__list">
+          <img class="real-example__item" src="img/after-mobile@1x.png" width="320" height="240" alt="Худой кот">
+          <img class="real-example__item" src="img/before-mobile@1x.png" width="320" height="240" alt="Толстый кот">
+        </div>
+        <div class="real-example__toogls">
+          <span class="real-example__scale-before">Было</span>
+          <span class="real-example__scale-after">Стало</span>
+        </div>
+      </section>
     </section>
     <section class="cooperation">
       <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
