--- a/source/index.html
+++ b/source/index.html
@@ -85,12 +85,14 @@
         </div>
       </section>
     </section>
-    <section class="cooperation">
-      <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
-      <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-    </section>
-    <section class="map">
-      <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
+    <section class="contacts">
+      <section class="contacts__cooperation cooperation">
+        <b class="cooperation__heading">Приглашаем к сотрудничеству дилеров!</b>
+        <p class="cooperation__adds">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </section>
+      <section class="contacts__map map">
+        <img class="map__image" src="img/map.png" width="320" height="400" alt="Карта">
+      </section>
     </section>
   </main>
 
@@ -111,8 +113,7 @@
       </ul>
     </section>
     <section class="page-footer__copyright copyright">
-      <b class="copyright__text">HTML academy</b>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">Ссылка на сайт HTML academy</span></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </section>
   </footer>
 
