Сетка блок categories на мобильной версии

--- a/source/index.html
+++ b/source/index.html
@@ -40,14 +40,14 @@
     <section class="categories">
       <ul class="categories__list">
         <li class="categories__item">
-          <h2 class="categories__heading">Похудение</h2>
+          <h2 class="categories__heading categories__heading--slim">Похудение</h2>
           <p class="categories__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="categories-button button button--theme-grey" href="#">Каталог SLIM</a>
+          <a class="categories-button" href="#">Каталог SLIM</a>
         </li>
         <li class="categories__item">
-          <h2 class="categories__heading">Набор массы</h2>
+          <h2 class="categories__heading categories__heading--pro">Набор массы</h2>
           <p class="categories__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="categories-button button button--theme-grey" href="#">Каталог PRO</a>
+          <a class="categories-button" href="#">Каталог PRO</a>
         </li>
       </ul>
     </section>
