Оборачивает инпуты в лейблы

--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
 </head>
-<body>
+<body class="desktop-header-background">
 
   <header class="page-header">
     <a class="page-header__logo">
